[package]
name = "xtensa-lx106-rt"
version = "0.1.0"
authors = ["Robin appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
r0 = "0.2.2"
xtensa-lx106-rt-proc-macros = { path = "procmacros", version = "=0.1.0" }

[profile.dev]
lto = true 
incremental = false
# debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = true
# debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"