[package]
name = "xtensa-lx106-rt"
version = "0.0.1"
authors = ["Robin appelman <robin@icewind.nl>"]
edition = "2018"
description = "Low level access for xtensa lx6 processors and peripherals"
repository = "https://github.com/icewind1991/xtensa-lx106-rt"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
r0 = "0.2.2"
xtensa-lx106-rt-proc-macros = { path = "procmacros", version = "=0.1.0" }
esp8266 = "0.0.6"

[profile.dev]
lto = true 
incremental = false
# debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = true
# debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"