[package]
authors = ["Jorge Aparicio <jorge@japaric.io>","Arjan Mels <arjan@mels.email>", "Scott Mabin <scott@mabez.dev>"]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `xtensa-lx106-rt`"
documentation = "https://docs.rs/xtensa-lx106-rt"
keywords = ["esp8266", "xtensa-lx106-rt", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "xtensa-lx106-rt-proc-macros"
repository = "https://github.com/icewind1991/xtensa-lx106-rt"
version = "0.1.1"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0"
